@@ -1,3 +1,5 @@
+- Refactor: Add first/last execution interval finders by calendar
+
 40.6.2 (15-02-2023)
 - Improvement: Add conclusion number to RegistrationConclusionBean
 
